k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-microservice
spec:
  type: ClusterIP
  selector:
    app: python-microservice
  ports:
    - port: 80
      targetPort: 8000
